<resources>
    <string name="app_name">AccountManagement</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="invalid_login">Invalid login</string>
    <string name="invalid_signup">Invalid signup</string>
    <string name="need_an_account_sign_up">Need an account? Sign up</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign up</string>
    <string name="user_information">User Information</string>
    <string name="location">Location</string>
    <string name="birthdate">Birthdate</string>
    <string name="update_user_information">Update user information</string>
    <string name="update">Update</string>
</resources>
