<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_margin="@dimen/edit_margin"
        android:gravity="left|center_horizontal"
        android:text="@string/user_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_margin"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_margin"
            android:layout_column="0"
            android:layout_row="1"/>

        <TextView
            android:text="@string/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_margin"
            android:layout_column="0"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_margin"
            android:layout_column="1"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_margin"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_margin"
            android:layout_column="1"
            android:layout_row="2"/>
    </GridLayout>

    <TextView
        android:id="@+id/updatedetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/edit_margin"
        android:gravity="left|center_horizontal"
        android:text="Need to update details?"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent" />
</LinearLayout>